--- a/geral.css
+++ b/geral.css
@@ -1,22 +1,122 @@
-:root {
-    --cor_de_fundo: #D7FFCC
-    --cor_primaria_fonte: #000000
+body {
+text-align: center;
+  background: pink;
+  margin: 1000;
+  padding: 0;
 }
-* {
-    margin: 0;
-    padding: 0;
+
+h1{
+  text-align: center;
+  color: purple
 }
-.banner {
-    width: 100%;
-    height: 100px
-    background-color: var(--cor_de_fundo);
+
+.caixa1 {
+  position: absolute;
+  background: lightblue;
+  width: 200px;
+  height: 200px;
+  right: 400px;
+  bottom: 200;
+}
+
+.caixa2 {
+  position: absolute;
+  background:white;
+  width: 200px;
+  height: 45px;
+  right: 705px;
+  bottom: 200;
+}
+
+.menuprincipal {
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  background: lightblue;
+  bottom: 0;
+  left: 0;
+}
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: 0;
+}
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: pink(20, 7, 2);
+  padding: 14px 16px;
+  text-align: center;
+  text-decoration: none;
+}
+li a:hover {
+  color: white(82, 70, 66);
+  background-color: white;
+}
+#yinyang {
+  height: 40%;
+}
+.Boxyin {
+  position: absolute;
+  width: 95%;
+  height: 200px;
+  background-color: ;
+  left: 0;
+  border-color: rgb(3, 3, 3);
+  border-width: 10px;
+  border-style: solid;
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+
 }
 .rodape {
-background-color: var(--cor_de_fundo);
-width: 100%;
-height: 85px;
+  position: absolute;
+  bottom: 0;
+  background-color: lightblue;
+  color: black;
+  width: 100%;
+  left: 0;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
 }
 .conteudo {
-    width: 100%;
-    height: 500px;
+  position: absolute;
+  top: 45px;
+  font-size: 30px;
+}
+.conteudopag2{
+  position: absolute;
+  top: 250px;
+  font-style: oblique;
+  font-size: 14px
+
+
+}
+.conteudo3{
+  position: absolute;
+  top: 200px;
+
+}
+.pagina01{
+  background: lightpink
+}
+.conteudopag3{
+  position: absolute;
+  top: 250px;
+  font-style: oblique;
+  font-size: 27px
+}
+.conteudopag4{
+  position: absolute;
+  top: 300px;
+  font-style: oblique;
+  font-size: 41px
 }
